[package]
name = "music_sync"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nappa85/music_sync"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
musicbrainz_rs = { version = "0.9", default-features = false, features = [
    "async",
    "rustls",
] }
stream_throttle = "0.5"
tokio = { version = "1.43", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
